Fixed compiler warnings: removed use of new Double and field injected autowired dependencies